@@ -28,5 +28,8 @@ Limbic_Region
 mmap__
 jagerman
 
+#infobot@freenode.net
+---------------------
+quin - many thanks for ctcp version bug help
 
 # vim:ts=4:sw=4:expandtab:tw=80
